Add support for removing a variable

--- a/uefivars.1
+++ b/uefivars.1
@@ -71,6 +71,10 @@ Without this option, the input file will be updated in-place.
 Write a
 .Sy BootOrder
 variable to the store to set the boot order.
+.It Fl r Ar var | Fl \&-remove Ar var
+Remove any variables named
+.Ar var
+from the variable store.
 .It Fl v | Fl \&-verbose
 Increase verbosity.
 In particular, with
